@@ -1,4 +1,4 @@
-/*	$NetBSD: mtrace.c,v 1.14.4.1 2000/10/17 19:50:25 tv Exp $	*/
+/*	$NetBSD: mtrace.c,v 1.14.4.2 2002/09/04 00:49:49 itojun Exp $	*/
 
 /*
  * mtrace.c
@@ -52,7 +52,7 @@
 
 #include <sys/cdefs.h>
 #ifndef lint
-__RCSID("$NetBSD: mtrace.c,v 1.14.4.1 2000/10/17 19:50:25 tv Exp $");
+__RCSID("$NetBSD: mtrace.c,v 1.14.4.2 2002/09/04 00:49:49 itojun Exp $");
 #endif
 
 #include <sys/types.h>
@@ -480,6 +480,8 @@ send_recv(dst, type, code, tries, save)
 	 */
 	while (TRUE) {
 	    FD_ZERO(&fds);
+	    if (igmp_socket >= FD_SETSIZE)
+		log(LOG_ERR, 0, "descriptor too big");
 	    FD_SET(igmp_socket, &fds);
 	    gettimeofday(&tv, 0);
 	    tv.tv_sec = tq.tv_sec + timeout - tv.tv_sec;
@@ -647,8 +649,6 @@ passive_mode()
     int ipdatalen, iphdrlen, igmpdatalen;
     int len, recvlen, dummy = 0;
     u_int32_t smask;
-
-    init_igmp();
 
     if (raddr) {
 	if (IN_MULTICAST(ntohl(raddr))) k_join(raddr, INADDR_ANY);
@@ -1194,6 +1194,9 @@ char *argv[];
 	fprintf(stderr, "mtrace: must be root\n");
 	exit(1);
     }
+    init_igmp();
+    if (setuid(getuid()) == -1)
+	log(LOG_ERR, errno, "setuid");
 
     argv++, argc--;
     if (argc == 0) goto usage;
@@ -1330,8 +1333,6 @@ Usage: mtrace [-Mlnps] [-w wait] [-m max_hops] [-q nqueries] [-g gateway]\n\
               [-S statint] [-t ttl] [-r resp_dest] [-i if_addr] source [receiver] [group]\n");
 	exit(1);
     }
-
-    init_igmp();
 
     /*
      * Set useful defaults for as many parameters as possible.
@@ -1713,7 +1714,6 @@ void
 log(int severity, int syserr, const char *format, ...)
 {
 	va_list ap;
-	char    fmt[100];
 
 	va_start(ap, format);
 #else
@@ -1725,7 +1725,6 @@ log(severity, syserr, format, va_alist)
 	va_dcl
 {
 	va_list ap;
-	char    fmt[100];
 
 	va_start(ap);
 #endif
@@ -1735,10 +1734,8 @@ log(severity, syserr, format, va_alist)
 	case 1: if (severity > LOG_NOTICE) return;
 	case 2: if (severity > LOG_INFO  ) return;
 	default:
-	    fmt[0] = '\0';
-	    if (severity == LOG_WARNING) strcat(fmt, "warning - ");
-	    strncat(fmt, format, 80);
-	    format = fmt;
+	    if (severity == LOG_WARNING)
+		fprintf(stderr, "warning - ");
 	    vfprintf(stderr, format, ap);
 	    if (syserr == 0)
 		fprintf(stderr, "\n");
